@@ -1,6 +1,6 @@
-#Tue Nov 18 11:53:25 CET 2008
-versionMicro=0
+#Wed Nov 19 09:45:26 CET 2008
+versionMicro=1
 versionMinor=0
-versionDate=20081118
 versionBranch=
+versionDate=20081119
 versionMajor=5
