@@ -1,3 +1,8 @@
+ili2fme 5.0.1 (2008-11-xx) (BETA) 
+---------------------------
+- bug: generate schema features of SURFACE helper table with "_itf_ref_$(MainTableName)"
+- auto-generate xtf_id if missing in linientable features
+
 ili2fme 5.0.0 (2008-11-18) (BETA) 
 ---------------------------
 !!! GML SUPPORT ADHERS TO ISO19136/GML 3.2 AND A DRAFT ILIGML SPEC !!!
